# ActuallyAGameEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini  launch.bat
assets/models/: boat.mtl
assets/scripts/: Boat.chai  MsaaPass.chai  PostProcess.chai  Spin.chai  Startup.chai
assets/shaders/: base.fs  base.vs  blend.fs  blur.cs  downsample.fs  invert.fs  pbr.glsl  screen.fs  skybox.fs  skybox.vs  texture.fs  tonemap.fs
include/: core.hpp  types.hpp
include/Engine/: application.hpp  asset_loader.hpp  camera.hpp  fly_camera.hpp  heightmap.hpp  orbit_camera.hpp  orbit_fly_camera.hpp  resource_handle.hpp  ui_layer.hpp  window.hpp
include/Event/: event.hpp
include/Game/: chat_log.hpp  components.hpp  game.hpp  game_client.hpp  game_server.hpp  main_menu.hpp  server_app.hpp
include/Graphics/: animation.hpp  batch2d.hpp  bindable.hpp  bloom_framebuffer.hpp  bone.hpp  buffer.hpp  cascade_shadowmap.hpp  compute.hpp  font.hpp  framebuffer.hpp  line_renderer.hpp  material.hpp  particle_system.hpp  screen.hpp  shader.hpp  shared_buffer.hpp  skeletal_mesh.hpp  skeleton.hpp  skeleton_animation.hpp  static_mesh.hpp  texture.hpp  texture2d.hpp  texture3d.hpp  vertex_array.hpp  voxel_map.hpp
include/Graphics/DX12/: command_list.hpp  command_queue.hpp  d3dx12.h  descriptor_heap.hpp  device.hpp  dx12_core.hpp  render_target.hpp  swap_chain.hpp
include/Math/: aabb.hpp  ray.hpp  transform.hpp
include/Networking/: client.hpp  packet.hpp  server.hpp
include/Scripting/: native_script.hpp  script.hpp
include/UI/: core.hpp  panel.hpp  state.hpp  theme.hpp  widget.hpp
include/Util/: allocators.hpp  color.hpp  console.hpp  entt_json_archive.hpp  exceptions.hpp  json.hpp  logger.hpp  mesh_loaders.hpp  profile.hpp  random.hpp  string.hpp  timer.hpp  vector.hpp
src/: main.cpp
src/Engine/: application.cpp  asset_loader.cpp  camera.cpp  fly_camera.cpp  heightmap.cpp  orbit_camera.cpp  orbit_fly_camera.cpp  resource_handle.cpp  ui_layer.cpp  window.cpp
src/Event/: event.cpp
src/Game/: chat_log.cpp  components.cpp  game.cpp  game_client.cpp  game_server.cpp  main_menu.cpp  server_app.cpp
src/Graphics/: animation.cpp  batch2d.cpp  bloom_framebuffer.cpp  bone.cpp  buffer.cpp  cascade_shadowmap.cpp  compute.cpp  font.cpp  framebuffer.cpp  line_renderer.cpp  material.cpp  particle_system.cpp  screen.cpp  shader.cpp  shared_buffer.cpp  skeletal_mesh.cpp  skeleton.cpp  skeleton_animation.cpp  static_mesh.cpp  texture.cpp  texture2d.cpp  texture3d.cpp  vertex_array.cpp  voxel_map.cpp
src/Graphics/DX12/: command_list.cpp  command_queue.cpp  descriptor_heap.cpp  device.cpp  dx12_core.cpp  render_target.cpp  swap_chain.cpp
src/Math/: aabb.cpp  ray.cpp  transform.cpp
src/Networking/: client.cpp  packet.cpp  server.cpp
src/Scripting/: native_script.cpp  script.cpp
src/UI/: common.cpp  core.cpp  panel.cpp  state.cpp  theme.cpp  widget.cpp
src/Util/: allocators.cpp  console.cpp  entt_json_archive.cpp  exceptions.cpp  logger.cpp  mesh_loaders.cpp  profile.cpp  random.cpp  string.cpp  timer.cpp  vector.cpp
tests/: tests.cpp
